--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
             <button class="btn btn-remove">Remove</button>
           </td>
         </tr>
+        <td class="name">
+          <span>Ironhack Laptop</span>
+        </td>
+        <td class="price">$<span>325.00</span></td>
+        <td class="quantity">
+          <input type="number" value="0" min="0" placeholder="Quantity" />
+        </td>
+        <td class="subtotal">$<span>0</span></td>
+        <td class="action">
+          <button class="btn btn-remove">Remove</button>
+        </td>
+      </tr>
         <!-- Iteration 2: Add more products here -->
       </tbody>
       <tfoot>
